--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "description": "Backend for Gbenga Omole",
   "main": "server.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "license": "ISC",
   "author": "Mohri Samuel Muakpo (Sam Muaks)",
   "type": "commonjs",
   "dependencies": {
-      "bcrypt": "^5.1.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0",
-      "express": "^4.18.2",
-      "helmet": "^7.0.0",
-      "joi": "^17.9.2",
-      "jsonwebtoken": "^9.0.0",
-      "mongoose": "^7.3.4",
-      "morgan": "^1.10.0"
-      },
-      "devDependencies": {
-      "nodemon": "^3.0.1"
-      }
-   }
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "mime-types": "^3.0.2",
+    "mongoose": "^7.3.4",
+    "morgan": "^1.10.0",
+    "multer": "^2.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
+}
