--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mime-types": "^3.0.2",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
