--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "fix-devotional": "node src/scripts/fixDevotionalPaths.js"
   },
   "license": "ISC",
   "author": "Mohri Samuel Muakpo (Sam Muaks)",
